refactor: migrate to new project structure and update dependencies
- Update module path from github.com/ponyjackal/go-gin-boilerplate to github.com/bonarizki-dat/boilerplate-gin-dat
- Reorganize Dockerfiles and docker-compose files into .docker directory
- Add new datatables functionality with example service, repository, and controller
- Update logger to support file output and improve formatting
- Upgrade Go version to 1.25.3 and update all dependencies
- Improve gitignore with better organization and additional patterns
- Refactor example model with proper GORM tags and JSON formatting

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,57 @@
-# Binaries for programs and plugins
+# =========================
+# Environment & Config
+# =========================
 .env
+*.log
+
+# =========================
+# Go Binaries & Build Outputs
+# =========================
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
-
-# Test binary, built with `go test -c`
 *.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+*.coverprofile
+*.prof
+*.pprof
+main
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
-.idea/
+# =========================
+# Dependencies
+# =========================
 vendor/
+
+# =========================
+# Editor & IDE
+# =========================
+.idea/
 .vscode/
+.cursor/
+*.swp
+
+# =========================
+# Temporary & Build Folders
+# =========================
 tmp/
+dist/
+build/
+
+# =========================
+# OS Generated Files
+# =========================
+.DS_Store
+Thumbs.db
+
+
+# =========================
+# Secrets
+# =========================
+secrets/
+
+# =========================
+# docker file .yml
+# =========================
+*.yml
