--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,54 @@
-# Server Config
+# ==================================
+# Application Environment
+# ==================================
 
-SECRET=h9wt*pasj6796j##w(w8=xaje8tpi6h*r&hzgrz065u&ed+k2)
+# Application environment: development, staging, production
+# This determines which features are enabled and how the app behaves
+APP_ENV=development
+
+# ==================================
+# Server Configuration
+# ==================================
+
+# Application secret key - MUST be changed in production!
+# Generate secure secret: openssl rand -base64 32
+SECRET=your-secret-key-here-min-32-chars-CHANGE-THIS-IN-PRODUCTION
+
+# JWT Secret for authentication tokens - MUST be changed in production!
+# Generate secure secret: openssl rand -base64 32
+JWT_SECRET=your-jwt-secret-here-min-32-chars-CHANGE-THIS-IN-PRODUCTION
+
+# Debug mode (true for development, false for production)
+# Automatically set based on APP_ENV if not specified
 DEBUG=False
+
+# Allowed hosts (comma separated)
 ALLOWED_HOSTS=0.0.0.0
+
+# Server host and port
 SERVER_HOST=0.0.0.0
 SERVER_PORT=8000
 
-# Database Config
-MASTER_DB_NAME=test_pg_go
-MASTER_DB_USER=mamun
-MASTER_DB_PASSWORD=123
-MASTER_DB_HOST=postgres_db
+# ==================================
+# Database Configuration - Master
+# ==================================
+
+MASTER_DB_NAME=your_database_name
+MASTER_DB_USER=your_database_user
+MASTER_DB_PASSWORD=your_database_password
+MASTER_DB_HOST=localhost
 MASTER_DB_PORT=5432
 MASTER_DB_LOG_MODE=True
 MASTER_SSL_MODE=disable
 
-REPLICA_DB_NAME=test_pg_go
-REPLICA_DB_USER=mamun
-REPLICA_DB_PASSWORD=123
+# ==================================
+# Database Configuration - Replica (Read-Only)
+# ==================================
+# For read scaling. Can be same as master in development.
+
+REPLICA_DB_NAME=your_database_name
+REPLICA_DB_USER=your_database_user
+REPLICA_DB_PASSWORD=your_database_password
 REPLICA_DB_HOST=localhost
 REPLICA_DB_PORT=5432
 REPLICA_SSL_MODE=disable
